--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"productName": "LRCFS File Renamer",
 	"version": "1.2.0",
 	"description": "Rename files based on metadata",
-	"license": "MIT",
+	"license": "GPL-3.0",
 	"repository": "https://github.com/LRCFS/lrcfs-file-renamer",
 	"main": "main.js",
 	"author": {
@@ -32,8 +32,7 @@
 		"moment": "2.24.0",
 		"popper.js": "1.15.0",
 		"strip-bom-stream": "4.0.0",
-		"underscore": "1.12.1",
-		"xlsx": "0.15.1"
+		"underscore": "1.12.1"
 	},
 	"devDependencies": {
 		"electron": "9.4.0",
